build: Bump PMD version and fix/suppress issues (#423)
* build: Bump PMD version and fix/suppress issues

* fix: Check for empty list for EnumSet

* refactor: Use emptySet instead of null

* refactor: QA feedback

* fix: Use IntStream.range